cpp-formatter/src/main/java/ru/ifmo/antlr/CPPParser.java
// Generated from C:/Users/Asus/University/Term05/MT/lab03/src/main/java/ru/ifmo\CPP.g4 by ANTLR 4.9
package ru.ifmo.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CPPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, ANY_TYPE=5, PRIMITIVE_TYPE=6, RETURN=7, 
		FOR=8, WHILE=9, IF=10, PRIMITIVE_VALUES=11, STRING=12, NUMBER=13, BOOL=14, 
		IDENTIFIER=15, OPERATORS=16, SEMICOLON=17, ASSIGN=18, MODIFY=19, COMMA=20, 
		LP=21, RP=22, BEGIN=23, END=24, WS=25;
	public static final int
		RULE_global = 0, RULE_global_action = 1, RULE_func = 2, RULE_actions = 3, 
		RULE_action = 4, RULE_swi = 5, RULE_cas = 6, RULE_var_declaration = 7, 
		RULE_modify = 8, RULE_assignment = 9, RULE_return_ = 10, RULE_for_ = 11, 
		RULE_while_ = 12, RULE_if_ = 13, RULE_expr = 14, RULE_funcInvoke = 15, 
		RULE_passedArgs = 16, RULE_signature = 17, RULE_type = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"global", "global_action", "func", "actions", "action", "swi", "cas", 
			"var_declaration", "modify", "assignment", "return_", "for_", "while_", 
			"if_", "expr", "funcInvoke", "passedArgs", "signature", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'switch'", "'case'", "':'", "'break'", null, null, "'return'", 
			"'for'", "'while'", "'if'", null, null, null, null, null, null, "';'", 
			"'='", null, "','", "'('", "')'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "ANY_TYPE", "PRIMITIVE_TYPE", "RETURN", 
			"FOR", "WHILE", "IF", "PRIMITIVE_VALUES", "STRING", "NUMBER", "BOOL", 
			"IDENTIFIER", "OPERATORS", "SEMICOLON", "ASSIGN", "MODIFY", "COMMA", 
			"LP", "RP", "BEGIN", "END", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CPP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CPPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class GlobalContext extends ParserRuleContext {
		public StringBuilder val;
		public Global_actionContext global_action;
		public List<Global_actionContext> global_action() {
			return getRuleContexts(Global_actionContext.class);
		}
		public Global_actionContext global_action(int i) {
			return getRuleContext(Global_actionContext.class,i);
		}
		public GlobalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterGlobal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitGlobal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitGlobal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GlobalContext global() throws RecognitionException {
		GlobalContext _localctx = new GlobalContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_global);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((GlobalContext)_localctx).val =  new StringBuilder();
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ANY_TYPE) {
				{
				{
				setState(39);
				((GlobalContext)_localctx).global_action = global_action();
				_localctx.val.append(((GlobalContext)_localctx).global_action.val);
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Global_actionContext extends ParserRuleContext {
		public StringBuilder val;
		public FuncContext func;
		public Var_declarationContext var_declaration;
		public Token SEMICOLON;
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CPPParser.SEMICOLON, 0); }
		public Global_actionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_global_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterGlobal_action(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitGlobal_action(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitGlobal_action(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Global_actionContext global_action() throws RecognitionException {
		Global_actionContext _localctx = new Global_actionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_global_action);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				((Global_actionContext)_localctx).func = func();
				((Global_actionContext)_localctx).val =  new StringBuilder(((Global_actionContext)_localctx).func.val);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(50);
				((Global_actionContext)_localctx).var_declaration = var_declaration();
				setState(51);
				((Global_actionContext)_localctx).SEMICOLON = match(SEMICOLON);
				((Global_actionContext)_localctx).val =  new StringBuilder(((Global_actionContext)_localctx).var_declaration.val)
				                                        .append(((Global_actionContext)_localctx).SEMICOLON.getText()).append('\n');
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public StringBuilder val;
		public TypeContext type;
		public Token IDENTIFIER;
		public Token LP;
		public SignatureContext signature;
		public Token RP;
		public Token BEGIN;
		public ActionsContext actions;
		public Token END;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CPPParser.IDENTIFIER, 0); }
		public TerminalNode LP() { return getToken(CPPParser.LP, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public TerminalNode RP() { return getToken(CPPParser.RP, 0); }
		public TerminalNode BEGIN() { return getToken(CPPParser.BEGIN, 0); }
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public TerminalNode END() { return getToken(CPPParser.END, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterFunc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitFunc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			((FuncContext)_localctx).type = type();
			setState(57);
			((FuncContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(58);
			((FuncContext)_localctx).LP = match(LP);
			setState(59);
			((FuncContext)_localctx).signature = signature();
			setState(60);
			((FuncContext)_localctx).RP = match(RP);
			setState(61);
			((FuncContext)_localctx).BEGIN = match(BEGIN);
			setState(62);
			((FuncContext)_localctx).actions = actions(1);
			setState(63);
			((FuncContext)_localctx).END = match(END);
			   ((FuncContext)_localctx).val =  new StringBuilder();
			            _localctx.val.append(((FuncContext)_localctx).type.val)
			                .append(' ')
			                .append(((FuncContext)_localctx).IDENTIFIER.getText())
			                .append(((FuncContext)_localctx).LP.getText())
			                .append(((FuncContext)_localctx).signature.val)
			                .append(((FuncContext)_localctx).RP.getText())
			                .append(' ')
			                .append(((FuncContext)_localctx).BEGIN.getText())
			                .append('\n')
			                .append(((FuncContext)_localctx).actions.val)
			                .append(((FuncContext)_localctx).END.getText())
			                .append('\n');
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionsContext extends ParserRuleContext {
		public int tabs;
		public StringBuilder val;
		public ActionContext action;
		public List<ActionContext> action() {
			return getRuleContexts(ActionContext.class);
		}
		public ActionContext action(int i) {
			return getRuleContext(ActionContext.class,i);
		}
		public ActionsContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ActionsContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_actions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitActions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitActions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionsContext actions(int tabs) throws RecognitionException {
		ActionsContext _localctx = new ActionsContext(_ctx, getState(), tabs);
		enterRule(_localctx, 6, RULE_actions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			((ActionsContext)_localctx).val =  new StringBuilder();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << ANY_TYPE) | (1L << RETURN) | (1L << FOR) | (1L << WHILE) | (1L << IF) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(67);
				((ActionsContext)_localctx).action = action(tabs);

				            for (int i = 0; i < tabs; i++) _localctx.val.append('\t');
				            _localctx.val.append(((ActionsContext)_localctx).action.val);
				        
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionContext extends ParserRuleContext {
		public int tabs;
		public StringBuilder val;
		public For_Context for_;
		public SwiContext swi;
		public If_Context if_;
		public While_Context while_;
		public Return_Context return_;
		public Var_declarationContext var_declaration;
		public Token SEMICOLON;
		public ModifyContext modify;
		public FuncInvokeContext funcInvoke;
		public For_Context for_() {
			return getRuleContext(For_Context.class,0);
		}
		public SwiContext swi() {
			return getRuleContext(SwiContext.class,0);
		}
		public If_Context if_() {
			return getRuleContext(If_Context.class,0);
		}
		public While_Context while_() {
			return getRuleContext(While_Context.class,0);
		}
		public Return_Context return_() {
			return getRuleContext(Return_Context.class,0);
		}
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CPPParser.SEMICOLON, 0); }
		public ModifyContext modify() {
			return getRuleContext(ModifyContext.class,0);
		}
		public FuncInvokeContext funcInvoke() {
			return getRuleContext(FuncInvokeContext.class,0);
		}
		public ActionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ActionContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterAction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitAction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitAction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionContext action(int tabs) throws RecognitionException {
		ActionContext _localctx = new ActionContext(_ctx, getState(), tabs);
		enterRule(_localctx, 8, RULE_action);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				((ActionContext)_localctx).for_ = for_(tabs);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).for_.val);                    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				((ActionContext)_localctx).swi = swi(tabs);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).swi.val);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				((ActionContext)_localctx).if_ = if_(tabs);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).if_.val);                     
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(84);
				((ActionContext)_localctx).while_ = while_(tabs);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).while_.val);                  
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				((ActionContext)_localctx).return_ = return_();
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).return_.val);                 
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				((ActionContext)_localctx).var_declaration = var_declaration();
				setState(91);
				((ActionContext)_localctx).SEMICOLON = match(SEMICOLON);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).var_declaration.val)
				                                    .append(((ActionContext)_localctx).SEMICOLON.getText()).append('\n');          
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(94);
				((ActionContext)_localctx).modify = modify();
				setState(95);
				((ActionContext)_localctx).SEMICOLON = match(SEMICOLON);
				((ActionContext)_localctx).val =  new StringBuilder().append(((ActionContext)_localctx).modify.val)
				                                    .append(((ActionContext)_localctx).SEMICOLON.getText()).append('\n');          
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(98);
				((ActionContext)_localctx).funcInvoke = funcInvoke();
				setState(99);
				match(SEMICOLON);
				((ActionContext)_localctx).val =  new StringBuilder(((ActionContext)_localctx).funcInvoke.val).append(";\n");
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwiContext extends ParserRuleContext {
		public int tabs;
		public StringBuilder val;
		public ExprContext expr;
		public CasContext cas;
		public TerminalNode LP() { return getToken(CPPParser.LP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RP() { return getToken(CPPParser.RP, 0); }
		public TerminalNode BEGIN() { return getToken(CPPParser.BEGIN, 0); }
		public TerminalNode END() { return getToken(CPPParser.END, 0); }
		public List<CasContext> cas() {
			return getRuleContexts(CasContext.class);
		}
		public CasContext cas(int i) {
			return getRuleContext(CasContext.class,i);
		}
		public SwiContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SwiContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_swi; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterSwi(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitSwi(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitSwi(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwiContext swi(int tabs) throws RecognitionException {
		SwiContext _localctx = new SwiContext(_ctx, getState(), tabs);
		enterRule(_localctx, 10, RULE_swi);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(T__0);
			setState(105);
			match(LP);
			setState(106);
			((SwiContext)_localctx).expr = expr(0);
			setState(107);
			match(RP);
			setState(108);
			match(BEGIN);

			        ((SwiContext)_localctx).val =  new StringBuilder();
			        _localctx.val.append("switch (").append(((SwiContext)_localctx).expr.val).append(") {\n").append(' ');
			        
			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				((SwiContext)_localctx).cas = cas(tabs + 1);

				                _localctx.val.append(((SwiContext)_localctx).cas.val);
				            
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__1 );
			setState(117);
			match(END);

			        for (int i = 0; i < tabs; i++) _localctx.val.append('\t');
			        _localctx.val.append("}\n");
			        
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CasContext extends ParserRuleContext {
		public int tabs;
		public StringBuilder val;
		public ExprContext expr;
		public ActionsContext actions;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ActionsContext actions() {
			return getRuleContext(ActionsContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(CPPParser.SEMICOLON, 0); }
		public CasContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public CasContext(ParserRuleContext parent, int invokingState, int tabs) {
			super(parent, invokingState);
			this.tabs = tabs;
		}
		@Override public int getRuleIndex() { return RULE_cas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterCas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitCas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitCas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CasContext cas(int tabs) throws RecognitionException {
		CasContext _localctx = new CasContext(_ctx, getState(), tabs);
		enterRule(_localctx, 12, RULE_cas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(T__1);
			setState(121);
			((CasContext)_localctx).expr = expr(0);
			setState(122);
			match(T__2);
			setState(123);
			((CasContext)_localctx).actions = actions(tabs + 1);
			setState(124);
			match(T__3);
			setState(125);
			match(SEMICOLON);

			        ((CasContext)_localctx).val =  new StringBuilder();
			        for (int i = 0; i < tabs; i++) _localctx.val.append('\t');
			        _localctx.val.append("case ")
			            .append(((CasContext)_localctx).expr.val)
			            .append(":\n")
			            .append(((CasContext)_localctx).actions.val);

			        for (int i = 0; i < tabs; i++) _localctx.val.append('\t');
			        _localctx.val.append("break")
			            .append(";\n");
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declarationContext extends ParserRuleContext {
		public StringBuilder val;
		public TypeContext type;
		public Token IDENTIFIER;
		public AssignmentContext assignment;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(CPPParser.IDENTIFIER, 0); }
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Var_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).enterVar_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CPPListener ) ((CPPListener)listener).exitVar_declaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CPPVisitor ) return ((CPPVisitor<? extends T>)visitor).visitVar_declaration(this);
			else return visitor.visitChildren(this);
		}
	}
